--- a/dTVTerminalApp/app/src/main/res/values/styles.xml
+++ b/dTVTerminalApp/app/src/main/res/values/styles.xml
@@ -12,4 +12,9 @@
         <item name="android:windowEnterAnimation">@anim/in_righttoleft</item>
         <item name="android:windowExitAnimation">@anim/out_lefttoright</item>
     </style>
+
+    <style name="default_layout_style">
+        <item name="android:background">#000000</item>
+        <item name="android:textColor">#ffffff</item>
+    </style>
 </resources>
