--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/daccount_resetting_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/daccount_resetting_main_layout.xml
@@ -44,6 +44,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="STBにdアカウントを登録するには" />
+
+        <Button
+            android:id="@+id/returnDAccountReSettingActivity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="戻る" />
     </LinearLayout>
 
 </LinearLayout>
