--- a/dTVTerminalApp/app/src/main/res/layout/search/layout/serch_top_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/search/layout/serch_top_main_layout.xml
@@ -28,7 +28,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="キーワードを入力"
-        android:textColor="#ffffffff"/>
+        android:textColor="#ffffffff" />
+
     <RelativeLayout
         android:id="@+id/Search_result"
         android:layout_width="wrap_content"
@@ -59,11 +60,27 @@
             android:textColor="#888888"
             android:textSize="25sp" />
     </RelativeLayout>
+
     <Button
         android:id="@+id/bt_backHome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="戻る" />
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="16dp"
+            android:backgroundTint="#ff0000"
+            android:src="@mipmap/sort" />
+
+    </FrameLayout>
 
 
 </LinearLayout>
