--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/daccount_resetting_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/daccount_resetting_main_layout.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    style="@style/default_layout_style"
     android:layout_height="match_parent">
 
     <RelativeLayout
@@ -37,18 +39,21 @@
             android:id="@+id/otherDAccountDAccounReSettingActivity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="#FFFFFF"
             android:text="別のdアカウントを登録する" />
 
         <Button
             android:id="@+id/dAccountRegDAccountReSettingActivity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="#FFFFFF"
             android:text="STBにdアカウントを登録するには" />
 
         <Button
             android:id="@+id/returnDAccountReSettingActivity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="#FFFFFF"
             android:text="戻る" />
     </LinearLayout>
 
