--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_paring_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_paring_main_layout.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    style="@style/default_layout_style"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <RelativeLayout
@@ -36,12 +38,14 @@
             android:id="@+id/useWithoutPairingSTBParingInvitationActivity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="#FFFFFF"
             android:text="ペアリングしないでアプリを利用する" />
 
         <Button
             android:id="@+id/returnSTBParingInvitationActivity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="#FFFFFF"
             android:text="戻る" />
 
     </LinearLayout>
