--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/activity_daccount_reg_confirmation.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/activity_daccount_reg_confirmation.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    style="@style/default_layout_style"
     android:layout_height="match_parent">
 
     <RelativeLayout
@@ -22,42 +24,49 @@
         android:id="@+id/dAccountLoginYesDAccountRegConfirmationActivity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="#FFFFFF"
         android:text="dアカウントログイン済 " />
 
     <Button
         android:id="@+id/dAccountLoginNoDAccountRegConfirmationActivity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="#FFFFFF"
         android:text="dアカウント未ログイン " />
 
     <Button
         android:id="@+id/dAccountAppliYesDAccountRegConfirmationActivity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="#FFFFFF"
         android:text="端末内にdアカウントアプリがある" />
 
     <Button
         android:id="@+id/dAccountAppliNoDAccountRegConfirmationActivity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="#FFFFFF"
         android:text="端末内にdアカウントアプリがない" />
 
     <Button
         android:id="@+id/dAccountSameYesDAccountRegConfirmationActivity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="#FFFFFF"
         android:text="STBに同じdアカウントが登録されている" />
 
     <Button
         android:id="@+id/dAccountSameNoDAccountRegConfirmationActivity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="#FFFFFF"
         android:text="STBに同じdアカウントが登録されていない" />
 
     <Button
         android:id="@+id/returnDAccountRegConfirmationActivity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="#FFFFFF"
         android:text="戻る" />
 
 </LinearLayout>
