--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/daccount_help_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/daccount_help_main_layout.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    style="@style/default_layout_style"
     android:layout_height="match_parent">
 
     <RelativeLayout
@@ -36,18 +38,21 @@
             android:id="@+id/activationCodeInputDAccounHelpActivity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="#FFFFFF"
             android:text="アクティベーションコードを入力する" />
 
         <Button
             android:id="@+id/repairDAccounHelpActivity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="#FFFFFF"
             android:text="再度ペアリングを実行する" />
 
         <Button
             android:id="@+id/returnDAccounHelpActivity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="#FFFFFF"
             android:text="戻る" />
     </LinearLayout>
 
