--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/tutorial_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/tutorial_main_layout.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    style="@style/default_layout_style"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <RelativeLayout
@@ -22,5 +24,6 @@
         android:id="@+id/skipOrFinishTutorialAcivity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="#FFFFFF"
         android:text="スキップ" />
 </LinearLayout>
