--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout.xml
@@ -10,220 +10,78 @@
         android:layout_height="40dp"
         android:background="#FF0000">
         <TextView
+            android:layout_alignParentRight="true"
+            android:id="@+id/home_main_layout_title_menu"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:textColor="#FFFFFF"
+            android:layout_centerVertical="true"
+            android:text="..."/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
             android:id="@+id/home_main_layout_title_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="dリモート"
+            android:text="ホーム"
             android:textColor="#FFFFFF"
             android:textStyle="bold"
             android:textSize="15sp"/>
-        <TextView
-            android:id="@+id/home_main_layout_r"
-            android:paddingRight="15dp"
-            android:paddingLeft="15dp"
-            android:layout_alignParentRight="true"
-            android:gravity="center_vertical"
-            android:layout_width="wrap_content"
-            android:text="..."
-            android:textSize="18sp"
-            android:textColor="#FFFFFF"
-            android:layout_height="match_parent" />
     </RelativeLayout>
-    <RelativeLayout
-        android:id="@+id/home_main_layout_prrl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:src="@mipmap/ic_launcher"/>
-        <TextView
-            android:text="PR"
-            android:textSize="30sp"
-            android:textColor="#0000FF"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"/>
-    </RelativeLayout>
-    <!--<android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
-        android:background="@color/colorPrimary"
-        android:layout_alignParentRight="true"
-        app:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar">
-        <TextView
-            android:id="@+id/title_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:textSize="20sp"
-            android:textColor="#ffffff"
-            android:text="dリモート"/>
-        <ImageView
-            android:id="@+id/title_back"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:visibility="visible"
-            android:src="@mipmap/ic_launcher"/>
-    </android.support.v7.widget.Toolbar>
-    <android.support.v4.widget.DrawerLayout
-        android:id="@+id/drawer_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent">
-
-        <android.support.design.widget.NavigationView
-            android:id="@+id/navigation_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:menu="@menu/navigation"
-            android:layout_gravity="start"
-            android:background="#000000"
-            app:itemIconTint="@color/navigation_selector"
-            app:itemTextColor="@color/navigation_selector"
-            app:headerLayout="@layout/header">
-        </android.support.design.widget.NavigationView>-->
+        android:layout_height="wrap_content">
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:id="@+id/home_main_layout_linearLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <RelativeLayout
-                android:layout_marginTop="20dp"
+                android:background="#FFFFFF"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_height="70dp">
                 <TextView
-                    android:layout_gravity="left"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:text="NOW ON AIR"
-                    android:textColor="#FFFFFF"/>
-                <TextView
-                    android:id="@+id/home_main_chanellist"
-                    android:layout_gravity="right"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:id="@+id/home_main_layout_kytv"
                     android:layout_alignParentRight="true"
+                    android:text="契約する"
                     android:textColor="#FFFFFF"
-                    android:text="チャンネルリスト△"/>
-            </RelativeLayout>
-            <android.support.v7.widget.RecyclerView
-                android:background="#000000"
-                android:id="@+id/home_main_chanellist_recyclerview"
-                android:divider="#ffff0000"
-                android:fadingEdge="none"
-                android:fadingEdgeLength="0dp"
-                android:overScrollMode="never"
-                android:dividerHeight="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <RelativeLayout
-                android:layout_marginTop="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                    android:background="#FF0000"
+                    android:layout_width="100dp"
+                    android:gravity="center"
+                    android:layout_height="35dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="15dp"/>
                 <TextView
-                    android:layout_gravity="left"
+                    android:layout_toLeftOf="@id/home_main_layout_kytv"
+                    android:textColor="#000000"
+                    android:maxLines="2"
+                    android:text="ご利用中のdアカウントでひかりTV for docomoの契約がありません。"
+                    android:ellipsize="end"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:text="おすすめ番組"
-                    android:textColor="#FFFFFF"/>
-                <TextView
-                    android:id="@+id/home_main_recommendlist"
-                    android:layout_gravity="right"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:textColor="#FFFFFF"
-                    android:text="24△"/>
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"/>
             </RelativeLayout>
             <RelativeLayout
-                android:layout_marginTop="20dp"
+                android:id="@+id/home_main_layout_prrl"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:background="@mipmap/home_pr"/>
                 <TextView
-                    android:layout_gravity="left"
+                    android:textSize="30sp"
+                    android:textColor="#0000FF"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:text="おすすめビデオ"
-                    android:textColor="#FFFFFF"/>
-                <TextView
-                    android:id="@+id/home_main_recommendvideolist"
-                    android:layout_gravity="right"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:textColor="#FFFFFF"
-                    android:text="24△"/>
-            </RelativeLayout>
-            <RelativeLayout
-                android:layout_marginTop="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <TextView
-                    android:layout_gravity="left"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:text="今日のテレビランキング"
-                    android:textColor="#FFFFFF"/>
-                <TextView
-                    android:id="@+id/home_main_ranklist"
-                    android:layout_gravity="right"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:textColor="#FFFFFF"
-                    android:text="10△"/>
-            </RelativeLayout>
-            <RelativeLayout
-                android:layout_marginTop="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <TextView
-                    android:layout_gravity="left"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:text="テレビランキング"
-                    android:textColor="#FFFFFF"/>
-                <TextView
-                    android:id="@+id/home_main_videoranklist"
-                    android:layout_gravity="right"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:textColor="#FFFFFF"
-                    android:text="10△"/>
-            </RelativeLayout>
-            <RelativeLayout
-                android:layout_marginTop="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <TextView
-                    android:layout_gravity="left"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:text="クリップ"
-                    android:textColor="#FFFFFF"/>
-                <TextView
-                    android:id="@+id/home_main_cliplist"
-                    android:layout_gravity="right"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:textColor="#FFFFFF"
-                    android:text="10△"/>
+                    android:layout_centerInParent="true"/>
             </RelativeLayout>
         </LinearLayout>
-    <!--</android.support.v4.widget.DrawerLayout>-->
+
+    </ScrollView>
 </LinearLayout>
