--- a/dTVTerminalApp/app/src/main/res/values/colors.xml
+++ b/dTVTerminalApp/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#FF0000</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="menuList">#000000</color>
+    <color name="menuListProgramTitle">#FFFFFF</color>
 </resources>
