--- a/dTVTerminalApp/app/src/main/res/values/colors.xml
+++ b/dTVTerminalApp/app/src/main/res/values/colors.xml
@@ -5,4 +5,10 @@
     <color name="colorAccent">#FF4081</color>
     <color name="menuList">#000000</color>
     <color name="menuListProgramTitle">#FFFFFF</color>
+    <color name="keyword_search_background">#aaaaaa</color>
+    <color name="keyword_search_hint">#888888</color>
+    <color name="keyword_search_text">#888888</color>
+    <color name="keyword_search_result_background">#222222</color>
+    <color name="keyword_search_header_background">#000000</color>
+    <color name="keyword_search_result_text">#FFFFFF</color>
 </resources>
