--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_recyclerview_footer.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_recyclerview_footer.xml
@@ -9,6 +9,7 @@
         android:layout_height="match_parent"
         android:layout_centerVertical="true"
         android:text="もっと見る"
+        android:textSize="12dp"
         android:gravity="center_vertical"
         android:textColor="#FFFFFF"/>
 </RelativeLayout>
