--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_recyclerview_item.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_recyclerview_item.xml
@@ -1,24 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="#000000">
+    android:layout_height="wrap_content">
 
     <RelativeLayout
-        android:layout_marginTop="2dp"
-        android:layout_marginLeft="2dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/home_main_recyclerview_item_iv"
-            android:layout_width="200dp"
-            android:layout_height="100dp" />
-        <TextView
-            android:id="@+id/home_main_recyclerview_item_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#FFFFFF"
+            android:scaleType="fitCenter"/>
+        <TextView
+            android:id="@+id/home_main_recyclerview_item_iv_new"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="4dp"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentBottom="true"/>
+            android:layout_alignParentTop="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12dp"
+            android:textStyle="bold"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:background="#FF0000"
+            android:textColor="#FFFFFF"
+            android:text="NEW"/>
+        <LinearLayout
+            android:layout_marginBottom="2dp"
+            android:layout_marginLeft="2dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentBottom="true"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/home_main_recyclerview_item_tv_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:textStyle="bold"
+                android:textSize="15dp"
+                android:textColor="#FFFFFF"/>
+            <TextView
+                android:id="@+id/home_main_recyclerview_item_tv_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12dp"
+                android:textColor="#FFFFFF"/>
+        </LinearLayout>
     </RelativeLayout>
 </RelativeLayout>
