--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/activity_home.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/activity_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.nttdocomo.android.tvterminalapp.activity.Home.HomeActivity">
+    tools:context="com.nttdocomo.android.tvterminalapp.activity.home_temp.HomeActivity">
 
     <TextView
         android:layout_width="wrap_content"
