--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/header_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/header_layout.xml
@@ -13,18 +13,32 @@
         android:gravity="center"
         android:text="く"
         android:textColor="#FFFFFF"
-        android:visibility="invisible" />
-
-    <TextView
-        android:id="@+id/header_layout_menu"
-        android:layout_width="50dp"
+        android:visibility="visible" />
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:gravity="center"
-        android:text="＝"
-        android:textColor="#FFFFFF"
-        android:visibility="invisible" />
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/header_layout_display"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:src="@drawable/tvicon"
+            android:visibility="invisible" />
+
+        <ImageView
+            android:id="@+id/header_layout_menu"
+            android:layout_marginLeft="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:src="@drawable/mene"
+            android:visibility="invisible" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/header_layout_text"
