--- a/dTVTerminalApp/app/src/main/res/layout/search/layout/fragment_televi_content.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/search/layout/fragment_televi_content.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+				android:background="#222222">
 
 	<TextView
 		android:id="@+id/tv_searched_result"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:layout_marginTop="6dp"
+		android:layout_marginBottom="6dp"
 		android:layout_marginLeft="20dp"
 		android:text="検索結果:0件"
 		android:textColor="@android:color/white"
