--- a/dTVTerminalApp/app/src/main/res/values/colors.xml
+++ b/dTVTerminalApp/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="menuList">#000000</color>
     <color name="menuListProgramTitle">#FFFFFF</color>
-    <color name="keyword_search_background">#aaaaaa</color>
+    <color name="keyword_search_background">#EEEEEE</color>
     <color name="keyword_search_hint">#888888</color>
     <color name="keyword_search_text">#888888</color>
     <color name="keyword_search_result_background">#222222</color>
