ランキング一覧　UIとDataProvider

--- a/dTVTerminalApp/app/src/main/res/layout/ranking/layout/ranking_top_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/ranking/layout/ranking_top_main_layout.xml
@@ -2,49 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    style="@style/default_layout_style"
+    android:background="#000000"
     android:orientation="vertical">
-
-    <RelativeLayout
-        android:id="@+id/home_main_layout_title"
+    <ScrollView
+        android:background="#FF0000"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="#FF0000">
-        <TextView
-            android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:id="@+id/ranking_top_main_layout_linearLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="ランキング(トップ)"
-            android:textColor="#FFFFFF"
-            android:textStyle="bold"
-            android:textSize="15sp"/>
-    </RelativeLayout>
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="コンテンツ詳細"
-        android:onClick="contentsDetailButton"/>
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/daily_tv_ranking_title"
-        android:onClick="dailyRankingButton"/>
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/weekly_tv_ranking_title"
-        android:onClick="weeklyTvRankingButton"/>
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/video_ranking_title"
-        android:onClick="videoRankingButton"/>
+            android:orientation="vertical">
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
