--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_recyclerview_item.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_recyclerview_item.xml
@@ -31,7 +31,7 @@
             android:textColor="#FFFFFF"
             android:text="NEW"/>
         <LinearLayout
-            android:layout_marginBottom="2dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_width="match_parent"
@@ -41,6 +41,7 @@
             android:orientation="vertical">
             <TextView
                 android:id="@+id/home_main_recyclerview_item_tv_content"
+                android:layout_marginRight="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
