--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_item.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_item.xml
@@ -19,6 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
+            android:textSize="13dp"
             android:textColor="#FFFFFF"
             android:textStyle="bold" />
 
