DREM-286 [DREM-25]レコメンド一覧(未契約状態、実装) UI実装
UI実装
・フラグメント：実装済み
・取得データ表示：着手中
・ページング：実装済み
・リクエスト処理：実装済み

データプロバイダ
・コールバック処理：実装見直し中
・サーバ通信リクエスト：実装見直し中

データマネージャ
・レスポンス処理：着手中
・DB（キャッシュ）：着手中

UIのフラグメント部分のみ動作確認済み

--- a/dTVTerminalApp/app/src/main/res/values/colors.xml
+++ b/dTVTerminalApp/app/src/main/res/values/colors.xml
@@ -11,4 +11,7 @@
     <color name="keyword_search_result_background">#222222</color>
     <color name="keyword_search_header_background">#000000</color>
     <color name="keyword_search_result_text">#FFFFFF</color>
+    <color name="recommend_list_background">#222222</color>
+    <color name="recommend_list_text">#FFFFFF</color>
+    <color name="recommend_list_border">#888888</color>
 </resources>
