--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/recommend_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/recommend_main_layout.xml
@@ -1,56 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2018 NTT DOCOMO, INC. All Rights Reserved.
+  -->
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000">
 
     <RelativeLayout
+        android:id="@+id/recommend_list_view"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="#FF0000">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="おすすめ番組"
-            android:textColor="#FFFFFF"
-            android:textStyle="bold"
-            android:textSize="15sp"/>
-    </RelativeLayout>
+        android:layout_height="match_parent"
+        android:visibility="visible">
 
-    <RelativeLayout
-        android:id="@+id/recommend_main_layout_ll1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <ImageView
-            android:id="@+id/recommend_main_layout_iv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher"/>
-        <TextView
-            android:layout_toRightOf="@id/recommend_main_layout_iv"
-            android:id="@+id/recommend_main_layout_tv1"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:textColor="#FFFFFF"
-            android:text="8/1(火) 21:00 – NOW ON AIR"/>
-        <TextView
-            android:layout_toRightOf="@id/recommend_main_layout_iv"
-            android:layout_below="@id/recommend_main_layout_tv1"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:textColor="#FFFFFF"
-            android:text="ヴァンパイア・ダイアリーズ　ファイルシーズン #1 「悪・・・"/>
-        <TextView
-            android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="20dp"
-            android:textSize="25sp"
-            android:textColor="#888888"
-            android:text="●"/>
+        <HorizontalScrollView
+            android:id="@+id/recommend_tab_strip_scroll"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="10dp"
+            android:fillViewport="true"
+            android:foregroundGravity="center_horizontal"
+            android:scrollbars="none"/>
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/vp_recommend_list_items"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/recommend_tab_strip_scroll"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"/>
     </RelativeLayout>
     <View
         android:layout_width="match_parent"
