DREM-396 ([DREM-47-3]ビデオランキング) 実装（UI）
UI実装
・レイアウト：実装済み
・データ表示：実装済み（総合のみそのほかはT.B.D解消後）
・ページング：実装済み
DP実装
・リクエスト：実装済み（総合のみそのほかはT.B.D解消後）
・レスポンス：実装済み（総合のみそのほかはT.B.D解消後）
・コールバックインタフェース：実装済み

FindBags 実施済み
Format済み

Change-Id: I8d3959a6b81803d39267a81b3fb383bf3274fa1c

--- a/dTVTerminalApp/app/src/main/res/layout/ranking/layout/video_ranking_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/ranking/layout/video_ranking_main_layout.xml
@@ -5,32 +5,18 @@
     style="@style/default_layout_style"
     android:orientation="vertical">
 
-    <RelativeLayout
-        android:id="@+id/home_main_layout_title"
+    <HorizontalScrollView
+        android:id="@+id/video_ranking_tab_strip_scroll"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="#FF0000">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="ランキング(ビデオランキング)"
-            android:textColor="#FFFFFF"
-            android:textStyle="bold"
-            android:textSize="15sp"/>
-    </RelativeLayout>
+        android:layout_height="50dp"
+        android:background="@android:color/background_dark"
+        android:fillViewport="true"
+        android:foregroundGravity="center_horizontal"
+        android:scrollbars="none" />
 
-    <Button
-        android:id="@+id/button9"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vp_video_ranking_result"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="contentsDetailButton"
-        android:text="コンテンツ詳細" />
-
-    <Button
-        android:id="@+id/button15"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="clipButton"
-        android:text="クリップ" />
+        android:layout_height="match_parent"
+        android:layout_below="@id/video_ranking_tab_strip_scroll" />
 </LinearLayout>
