DREM-475  ([DREM-24]録画予約一覧) 実装(UI,DP,DM)
コミットレビュー指摘修正対応(3回目)
UI 実装
・コールバックレスポンスデータのset：実装済み
・ページング：実装済み
・コンポーネント共通化：実装済み
DP実装
・WebClientコールバック：実装済み
・UIへのコールバック：実装済み
・リモートへのリクエスト：実装済み
・ソート：着手中
・突合：着手中

Change-Id: Ia6e178c25001f496bab2dd1bf355e13a987e7028

--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/item_common_result_recoding_reservation_list.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/item_common_result_recoding_reservation_list.xml
@@ -8,6 +8,14 @@
     android:layout_height="wrap_content"
     android:descendantFocusability="blocksDescendants">
 
+    <TextView
+        android:id="@+id/item_common_result_recording_reservation__channel_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/item_common_result_content_time"
+        android:textColor="@color/white_text"
+        android:background="@color/recording_reservation_status_background_black"
+        />
     <!-- item_common_result.xml を読み込む -->
     <include layout="@layout/item_common_result" />
 
