--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/contents_detail_header_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/contents_detail_header_layout.xml
@@ -20,7 +20,7 @@
         android:visibility="visible" />
 
     <TextView
-        android:id="@+id/header_layout_text"
+        android:id="@+id/header_layout_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
