[DREM-11]コンテンツ詳細画面(他サービス、画面表示)
データプロバイダ作成、ステータスバー色変更処理追加

Change-Id: If35096168fee3c80101d99db73cd36b91425144f

--- a/dTVTerminalApp/app/src/main/res/values/styles.xml
+++ b/dTVTerminalApp/app/src/main/res/values/styles.xml
@@ -32,4 +32,11 @@
         <item name="android:maxHeight">10dp</item>
     </style>
 
+    <!--コンテンツ詳細-->
+    <style name="ContentsDetailTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/contents_header_background</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
 </resources>
