--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/tv_player_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/tv_player_main_layout.xml
@@ -1,52 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/default_layout_style"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    style="@style/default_layout_style"
     android:orientation="vertical">
 
+    <!-- コンテンツ詳細用のヘッダ を読み込む -->
     <RelativeLayout
-        android:id="@+id/home_main_layout_title"
+        android:id="@+id/contents_detail_header"
+        android:layout_alignParentTop="true"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="#FF0000">
-        <TextView
-            android:id="@+id/contents_detail_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="コンテンツ詳細"
-            android:textColor="#FFFFFF"
-            android:textStyle="bold"
-            android:textSize="15sp"/>
+        android:layout_height="wrap_content">
+
+        <include layout="@layout/contents_detail_header_layout" />
     </RelativeLayout>
 
-    <Button
-        android:id="@+id/button6"
+    <!--コンテンツ詳細のスクロール部分-->
+    <ScrollView
+        android:id="@+id/contents_detail_scroll_view"
+        android:layout_below="@+id/contents_detail_header"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <!--サムネイル用レイアウト-->
+            <RelativeLayout
+                android:id="@+id/contents_detail_thumbnail"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <!--TODO:ここにActivityからサムネイル又はプレイヤーをセット-->
+            </RelativeLayout>
+
+            <!--タブ用ViewPager-->
+            <android.support.v4.view.ViewPager
+                android:id="@+id/dtv_contents_detail_tab"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </LinearLayout>
+    </ScrollView>
+
+    <!--テレビで視聴するボタン用レイアウト-->
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="recommendButton"
-        android:text="コンテンツ詳細(おすすめ作品)" />
+        android:layout_alignParentBottom="true">
 
-    <Button
-        android:id="@+id/button18"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="channelButton"
-        android:text="チャンネル" />
+        <Button
+            android:id="@+id/button6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="recommendButton"
+            android:text="コンテンツ詳細(おすすめ作品)" />
 
-    <Button
-        android:id="@+id/button17"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="scheduleRecButton"
-        android:text="録画予約する" />
+        <Button
+            android:id="@+id/button18"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="channelButton"
+            android:text="チャンネル" />
 
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="remoteControlButton"
-        android:text="テレビで視聴する" />
+        <Button
+            android:id="@+id/button17"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="scheduleRecButton"
+            android:text="録画予約する" />
 
-</LinearLayout>
+        <Button
+            android:id="@+id/button5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="remoteControlButton"
+            android:text="テレビで視聴する" />
+    </RelativeLayout>
+</RelativeLayout>
